# epub-bilingual-bakery

./: .gitignore  LICENSE  README.md  RELEASE_INSTRUCTIONS.md  book_gemma.py  book_nllb.py  build_executable.bat  build_executable.sh  convert_sqlite.py  db_manager.py  epub_processor.py  html_formatter.py  icon.bat  icon.xcf  pyproject.toml  requirements.txt  test_db_manager.py  test_epub_processor.py  test_html_formatter.py  test_text_processor.py  test_translation_config.py  test_translation_engine.py  test_translations.sqlite  text_processor.py  translation_config.py  translation_engine.py  wordlist.sqlite
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
